# capece-api

./: .gitignore  API_DOCS.md  CREDITS.md  DEPLOYMENT.md  DEVELOPER_GUIDE.md  DOCUMENTATION_AUDIT_RESULTS.md  LICENSE  README.md  TESTING_GUIDE.md  docker-compose.yml  start-all.sh  test-all.sh
.github/: copilot-instructions.md
go/: Dockerfile  README.md  go.mod  main.go
nodejs-express/: Dockerfile  EVIDENCE_IMPLEMENTATION.md  README.md  package.json
nodejs-express/src/: server.js
nodejs-express/src/data/: mockData.js
nodejs-express/src/middleware/: errorHandlers.js
nodejs-express/src/routes/: evidence.js  tracking.js
nodejs-express/src/services/: evidenceService.js  trackingService.js
nodejs-express/src/utils/: validators.js
php/: README.md  index.php
php-laravel/: Dockerfile  README.md  artisan  composer.json  index.php
php-laravel/app/Http/Controllers/Api/: EvidenceController.php  TrackingController.php
php-laravel/app/Services/: EvidenceService.php  TrackingService.php
php-laravel/routes/: api.php
python-django/: Dockerfile  README.md  requirements.txt
python-django/tracking/: evidence_service.py  services.py  urls.py  views.py
python-django/tracking_api/: settings.py  urls.py  wsgi.py
rust/: Cargo.toml  Dockerfile  README.md
rust/src/: main.rs
