[package]
name = "tracking-api"
version = "1.0.0"
edition = "2021"
description = "Package tracking API implementation with Rust and Actix-web"
license = "MIT"

[dependencies]
actix-web = "4.4"
actix-multipart = "0.6"
actix-files = "0.6"
tokio = { version = "1.32", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.9"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.10"
uuid = { version = "1.4", features = ["v4"] }
futures-util = "0.3"
mime = "0.3"
